# ChangeLog for app-misc/cl-base-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  cl-base-meta-11.6-r1.ebuild:
  Specify lower version of GRUB2

  15 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  cl-base-meta-11.6-r1.ebuild:
  Remove livecd-tools

*cl-base-meta-11.6-r1 (02 Jun 2011)

  02 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-base-meta-11.6-r1.ebuild:
  Add grub2

*cl-base-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-11.3.ebuild, +cl-base-meta-11.6.ebuild:
  Version bump.

*cl-base-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-11.0-r1.ebuild, +cl-base-meta-11.3.ebuild:
  Version bump.

*cl-base-meta-11.0-r1 (19 Feb 2011)

  19 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-11.0.ebuild, +cl-base-meta-11.0-r1.ebuild:
  replace calculate-install to calculate-utilities

*cl-base-meta-11.0 (09 Dec 2010)

  09 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> -cl-base-meta-10.9.ebuild,
  +cl-base-meta-11.0.ebuild:
  Version bump

*cl-base-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.8.81.ebuild, +cl-base-meta-10.9.ebuild:
  new version

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.5.83.ebuild, +cl-base-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-base-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.5.83.ebuild, +cl-base-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-base-meta-10.5.83 (03 Aug 2010)

  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-base-meta-10.5.83.ebuild:
  bump new meta-package
