@@ -1,3 +1,2 @@
-EBUILD cl-base-meta-11.6-r1.ebuild 622 RMD160 5b44ee5fd0264989113cd1feca4338b52206f142 SHA1 f872df150b30845ae71faeff2dffad3e09db9aeb SHA256 e6bf11a953d55b90c19baedbb79f2ab482aa919369c7d132475dc74c12767b73
-EBUILD cl-base-meta-11.6.ebuild 596 RMD160 40e06d5ed3a8dbf4eee4e5da5d944d72c49df57f SHA1 b8ab3f511fcf8810f28c047902279d634f03ffea SHA256 c2e1522b0091d3652c5bdfb4c9f758babffd86d9d3501238cd3549f7635def5c
-MISC ChangeLog 1944 RMD160 d546447fb7e6f680e1f245c9d05b080331cd9c4f SHA1 8624a98d17d67d76b76bbbf6fbd2944409724e5b SHA256 b2d539bb36f78f7b8da7a22b42ab468177f3b50482737cdacdbb298f7d491283
+EBUILD cl-base-meta-11.6-r2.ebuild 642 RMD160 3bb91051814594fb27e50212cdffd2819fff4b71 SHA1 d6b06179f00705f07726acb1b5d4b65fd8234bbd SHA256 84be52463b267c22e6ad0454509848c496d73250af7c49b49cc85fd9d36d79cf
+MISC ChangeLog 2163 RMD160 918a1f6b78afe4d6302419016bf3dfaf5cb8fe97 SHA1 d166a30b29560c91de5e1d595f2daf2950f8acdd SHA256 f645ce9ff707bd8805d8b27624e92ba64f3cd94132cf6ab48a9d951f23fdac67
