@@ -28,6 +28,7 @@ RDEPEND="
 	sys-boot/grub:0
 	>=sys-boot/grub-1.99-r4:2
 	sys-boot/os-prober
+	sys-fs/btrfs-progs
 	sys-fs/reiserfsprogs
 	sys-kernel/calckernel
 "
