@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-base-meta-11.6-r2 (01 Aug 2011)
+
+  01 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-base-meta-11.6.ebuild, -cl-base-meta-11.6-r1.ebuild,
+  +cl-base-meta-11.6-r2.ebuild:
+  Add sys-fs/btrfs-progs
+
   27 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   cl-base-meta-11.6-r1.ebuild:
   Specify lower version of GRUB2
